# PracticalFinanceAlgorithms

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/practicalfinancealgorithms/: constrained_regressionQP.py  main.py
